Fixed grid gap for repair notes.

--- a/Src/index.css
+++ b/Src/index.css
@@ -101,7 +101,7 @@ body > div:nth-of-type(4) {
 	display: grid;
 	grid-template-columns: 300px auto;
 	grid-template-rows: 225px auto;
-	grid-gap: 20px 20px;
+	grid-gap: 14px 20px;
 	padding: 15px 0 15px 0;
 }
 
